feat: add version indicator to MainLayout

--- a/Tournaments.Web/Layout/MainLayout.razor
+++ b/Tournaments.Web/Layout/MainLayout.razor
@@ -30,7 +30,7 @@
     <main>
         <div class="background-image"></div>
         <div class="top-row px-4">
-            <a href="https://github.com/HexMerlin/Tournaments" target="_blank">Source code</a>
+            <span style="color: inherit;">v0.1</span> <a href="https://github.com/HexMerlin/Tournaments" target="_blank">Source code</a>
         </div>
 
         <article class="content px-4">
