--- a/Tournaments.Web/Shared/RenderTournament.razor
+++ b/Tournaments.Web/Shared/RenderTournament.razor
@@ -30,6 +30,7 @@
         color: #17a2b8;
         font-weight: 500;
         margin-bottom: 5px;
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
     }
     
     .player-item {
